<resources>
    <string name="app_name">Audiogram</string>
    <string name="audiogram">Audiogram</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="_00">00</string>
    <string name="colon">:</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="tag_text">Tag Text</string>
    <string name="view_tags">View Tags</string>
    <string name="record">Record</string>
    <string name="play_recordings">Play Recordings</string>
    <string name="edit">Edit</string>
    <string name="trim">Trim</string>
    <string name="output_name">Output name</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="recorder">Recorder</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">Don\'t have an account? Sign up.</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="fill_data_error">Error: Fill all of the data</string>
    <string name="registered_sucessfully">Registered successfully</string>
    <string name="data_is_missing_error">Error: Data is missing</string>
    <string name="email">Email</string>
    <string name="voices">Voices</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search_username">Search username</string>
    <string name="no_user_found">No user found</string>
    <string name="change_profile">Change Profile</string>
    <string name="logout">Logout</string>
    <string name="follow">Follow +</string>
    <string name="followed">Followed ✓</string>
    <string name="upload_voice">+ Upload Voice</string>
    <string name="zero">0</string>
    <string name="no_voices_yet">No voices yet</string>
    <string name="insert_comment_here">Insert comment here</string>
    <string name="connection_error">Cannot connect to server</string>
</resources>