<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">

  <ImageView
      android:id="@+id/audiogram_logo"
      android:layout_width="200dp"
      android:layout_height="200dp"
      app:srcCompat="@drawable/audiogram"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@id/first_name"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <EditText
      android:id="@+id/first_name"
      android:layout_width="wrap_content"
      android:ems="15"
      android:layout_height="wrap_content"
      android:hint="@string/first_name"
      app:layout_constraintBottom_toTopOf="@id/last_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/audiogram_logo" />

  <EditText
      android:id="@+id/last_name"
      android:layout_width="wrap_content"
      android:ems="15"
      android:layout_height="wrap_content"
      android:hint="@string/last_name"
      app:layout_constraintBottom_toTopOf="@id/email_address"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/first_name" />


  <EditText
      android:id="@+id/email_address"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="15"
      android:hint="@string/email_address"
      android:inputType="textEmailAddress"
      app:layout_constraintTop_toBottomOf="@id/last_name"
      app:layout_constraintBottom_toTopOf="@id/username"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"/>
    
    
  <EditText
      android:id="@+id/username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="15"
      android:hint="@string/username"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/email_address" 
      app:layout_constraintBottom_toTopOf="@id/password"/>


  <EditText
      android:id="@+id/password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="15"
      android:hint="@string/password"
      android:inputType="textPassword"
      app:layout_constraintTop_toBottomOf="@id/username"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />

  <EditText
      android:id="@+id/password_confirmation"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="15"
      android:hint="@string/password_confirmation"
      android:inputType="textPassword"
      app:layout_constraintTop_toBottomOf="@id/password"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />
  
  <Button
      android:id="@+id/register_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/sign_up"
      app:layout_constraintEnd_toEndOf="@id/password_confirmation"
      app:layout_constraintStart_toStartOf="@id/password_confirmation"
      app:layout_constraintTop_toBottomOf="@id/password_confirmation"
      android:backgroundTint="@color/secondary_light"/>

</androidx.constraintlayout.widget.ConstraintLayout>