<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="122dp"
        android:layout_height="113dp"
        android:src="@drawable/default_profile"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/profile_image"

        android:textStyle="bold"
        tools:text="Username"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@id/username"
        tools:text="(name)"
        android:layout_marginStart="10dp"

        android:textSize="20sp"/>

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_marginStart="18dp"/>

    <LinearLayout
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_btn"
        app:layout_constraintBottom_toBottomOf="@id/profile_btn"
        android:layout_marginEnd="18dp"
        android:visibility="invisible"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_exit"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/voices_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/voices"
        app:layout_constraintEnd_toEndOf="@id/voices"
        app:layout_constraintBottom_toTopOf="@id/voices"
        tools:text="0"
        android:textStyle="bold"
        android:textSize="19sp"/>
    <TextView
        android:id="@+id/voices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toStartOf="@id/followers"
        android:text="@string/voices"
        android:textStyle="bold"
        android:textSize="19sp"/>


    <TextView
        android:id="@+id/followers_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/followers"
        app:layout_constraintEnd_toEndOf="@id/followers"
        app:layout_constraintBottom_toTopOf="@id/followers"
        tools:text="0"
        android:textStyle="bold"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/voices"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toStartOf="@id/following"
        android:textStyle="bold"
        android:text="@string/followers"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/following_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/following"
        app:layout_constraintEnd_toEndOf="@id/following"
        app:layout_constraintBottom_toTopOf="@id/following"
        tools:text="0"
        android:textStyle="bold"
        android:textSize="19sp"/>

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/followers"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintBottom_toBottomOf="@id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:text="@string/following"
        android:textSize="19sp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/profile_btn" />

    <Button
        android:id="@+id/upload_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_voice"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="18dp"
        android:visibility="invisible"
        />



</androidx.constraintlayout.widget.ConstraintLayout>