<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.RecorderFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/audiogram"
        android:textColor="@color/secondary_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/record_mode_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_record"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/record_mode_btn_caption"
        app:layout_constraintEnd_toEndOf="@id/record_mode_btn_caption"
        app:tint="@color/secondary_light" />

    <TextView
        android:id="@+id/record_mode_btn_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:textColor="@color/primary_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/record_mode_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/play_mode_btn_caption"/>

    <ImageButton
        android:id="@+id/play_mode_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_play_list"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/play_mode_btn_caption"
        app:layout_constraintEnd_toEndOf="@id/play_mode_btn_caption"
        app:tint="@color/primary_dark"/>
    <TextView
        android:id="@+id/play_mode_btn_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_recordings"
        android:textColor="@color/primary_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/play_mode_btn"
        app:layout_constraintStart_toEndOf="@id/record_mode_btn_caption"
        app:layout_constraintEnd_toStartOf="@id/trim_mode_btn_caption"/>

    <ImageButton
        android:id="@+id/trim_mode_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        app:srcCompat="@drawable/ic_trim"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/trim_mode_btn_caption"
        app:layout_constraintEnd_toEndOf="@id/trim_mode_btn_caption"
        app:tint="@color/primary_dark"/>
    <TextView
        android:id="@+id/trim_mode_btn_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trim"
        android:textColor="@color/primary_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/trim_mode_btn"
        app:layout_constraintStart_toEndOf="@id/play_mode_btn_caption"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/trim_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/_00_00_00"
        android:textSize="@dimen/_15sdp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trim_mode_btn_caption" />
    <TextView
        android:id="@+id/trim_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:layout_marginEnd="@dimen/_30sdp"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/trim_mode_btn_caption"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        />
    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/trim_seek_bar"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/trim_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        />
    <EditText
        android:id="@+id/trim_output"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/output_name"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trim_seek_bar"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/save_trim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trim_output"
        android:visibility="invisible"
    />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recorderLayout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/timer"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ImageButton
            android:id="@+id/start_recording_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"

            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/recording"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/stop_recording_btn"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@null"

            android:scaleType="fitXY"
            android:src="@drawable/recording_on"
            android:visibility="invisible"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/tag_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/tag"

            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stop_recording_btn" />


        <LinearLayout
            android:id="@+id/tag_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stop_recording_btn">

            <ImageButton
                android:id="@+id/submit_tag_btn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/checked"
                app:layout_constraintStart_toEndOf="@id/tag_text"
                app:layout_constraintTop_toBottomOf="@id/stop_recording_btn" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tag_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"

                android:hint="@string/tag_text"
                app:layout_constraintTop_toBottomOf="@id/stop_recording_btn">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tag_text_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:id="@+id/tag_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/play_mode_btn_caption"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tag_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:scrollbars="vertical"/>
    </FrameLayout>

    <ImageButton
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_play"
        app:tint="@color/secondary_light" />

    <ImageButton
        android:id="@+id/highPitchBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/play_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/normalPitchBtn"
        app:srcCompat="@drawable/high_pitch"
        app:tint="@color/primary_dark" />

    <ImageButton
        android:id="@+id/lowPitchBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/play_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/normalPitchBtn"
        app:srcCompat="@drawable/low_pitch"
        app:tint="@color/primary_dark" />

    <ImageButton
        android:id="@+id/normalPitchBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/lowPitchBtn"
        app:layout_constraintEnd_toStartOf="@id/highPitchBtn"
        app:layout_constraintBottom_toTopOf="@id/play_btn"
        app:srcCompat="@drawable/normal_pitch"
        app:tint="@color/secondary_light" />


    <ImageButton
        android:id="@+id/file_manager_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_folder"
        android:background="@null"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toTopOf="@id/file_name"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible" />
    <ImageButton
        android:id="@+id/pause_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_pause"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        app:tint="@color/secondary_light" />
    <SeekBar
        android:id="@+id/seekBar"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:max="100"
        android:min="0"
        app:layout_constraintBottom_toTopOf="@id/timer"/>
    <TextView
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textColor="@color/primary_dark"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_mode_btn_caption" />

</androidx.constraintlayout.widget.ConstraintLayout>